--- a/style.css
+++ b/style.css
@@ -13,10 +13,7 @@ h1 {
 
 }
 
-h3 {
-    font-weight: 300;
-}
-
-h2 {
-    flex-direction: column;
+h1 {
+    max-width: 200;
+    mask-image: 331;
 }
